--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "test to ire polus",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "tsc && node --es-module-specifier-resolution=node build/app.js",
-    "build": "tsc",
-    "start": "node --es-module-specifier-resolution=node ./build/app.js",
+    "dev": "tsc && node --es-module-specifier-resolution=node build/index.js && snowpack dev",
+    "build": "tsc && snowpack build",
+    "start": "node --es-module-specifier-resolution=node ./build/index.js",
     "test": "tsc && SET NODE_ENV=test && node ./node_modules/mocha/bin/mocha --timeout 5000"
   },
   "repository": {
@@ -23,6 +24,14 @@
     "express": "^4.17.1",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
+    "svelte": "^3.38.2",
     "ts-node": "^10.0.0"
+  },
+  "devDependencies": {
+    "@snowpack/plugin-dotenv": "^2.1.0",
+    "@snowpack/plugin-svelte": "^3.7.0",
+    "@snowpack/plugin-typescript": "^1.2.1",
+    "snowpack": "^3.5.1",
+    "svelte-preprocess": "^4.7.3"
   }
 }
