--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsc && node --es-module-specifier-resolution=node build/index.js && snowpack dev",
+    "dev": "snowpack dev",
     "build": "tsc && snowpack build",
     "start": "node --es-module-specifier-resolution=node ./build/index.js",
     "test": "tsc && SET NODE_ENV=test && node ./node_modules/mocha/bin/mocha --timeout 5000"
@@ -25,12 +25,15 @@
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
     "svelte": "^3.38.2",
+    "svelte-check": "^1.6.0",
     "ts-node": "^10.0.0"
   },
   "devDependencies": {
+    "@snowpack/app-scripts-svelte": "^2.0.1",
     "@snowpack/plugin-dotenv": "^2.1.0",
     "@snowpack/plugin-svelte": "^3.7.0",
     "@snowpack/plugin-typescript": "^1.2.1",
+    "@tsconfig/svelte": "^1.0.12",
     "snowpack": "^3.5.1",
     "svelte-preprocess": "^4.7.3"
   }
