--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "snowpack dev",
+    "dev": "tsc | node --es-module-specifier-resolution=node ./build/backend/index.js | webpack serve",
     "build": "tsc && snowpack build",
     "start": "node --es-module-specifier-resolution=node ./build/index.js",
     "test": "tsc && SET NODE_ENV=test && node ./node_modules/mocha/bin/mocha --timeout 5000"
@@ -29,12 +29,15 @@
     "ts-node": "^10.0.0"
   },
   "devDependencies": {
-    "@snowpack/app-scripts-svelte": "^2.0.1",
-    "@snowpack/plugin-dotenv": "^2.1.0",
-    "@snowpack/plugin-svelte": "^3.7.0",
-    "@snowpack/plugin-typescript": "^1.2.1",
     "@tsconfig/svelte": "^1.0.12",
-    "snowpack": "^3.5.1",
-    "svelte-preprocess": "^4.7.3"
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
+    "style-loader": "^2.0.0",
+    "svelte-loader": "^3.1.1",
+    "svelte-preprocess": "^4.7.3",
+    "ts-loader": "^9.2.2",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
