--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsc | node --es-module-specifier-resolution=node ./build/backend/index.js | webpack serve",
+    "dev": "webpack serve",
+    "serve": "tsc | node --es-module-specifier-resolution=node ./build/backend/server.js",
     "build": "tsc && snowpack build",
     "start": "node --es-module-specifier-resolution=node ./build/index.js",
     "test": "tsc && SET NODE_ENV=test && node ./node_modules/mocha/bin/mocha --timeout 5000"
@@ -21,7 +22,6 @@
   },
   "homepage": "https://github.com/guest363/test-laser#readme",
   "dependencies": {
-    "express": "^4.17.1",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
     "svelte": "^3.38.2",
